--- a/Front-portfolio/src/components/Navbar/style.css
+++ b/Front-portfolio/src/components/Navbar/style.css
@@ -1,3 +1,28 @@
+.nav-item{
+  font-size: 2rem;
+  margin: 1rem 1.5rem;
+  padding: 0.5rem 2rem;
+}
+
+.nav-item:nth-child(1):hover{
+ background: linear-gradient(45deg, #E6A8FD, #0CAAD9) ;
+ border-radius: 20px 40px 5px ;
+ 
+}
+
+.nav-item:nth-child(2):hover{
+  background: linear-gradient(45deg, #E6A8FD, #0CAAD9) ;
+  border-radius: 40px 15px 25px  ;
+ }
+
+ .nav-item:nth-child(3):hover{
+  background: linear-gradient(45deg, #E6A8FD, #0CAAD9) ;
+  border-radius: 13px 40px 22px  ;
+ }
+
+
+
+
 @media (min-width: 320px) {
  img{
   width: 4rem;
