--- a/Front-portfolio/src/components/Navbar/style.css
+++ b/Front-portfolio/src/components/Navbar/style.css
@@ -1,3 +1,22 @@
+
+.navbar-brand{
+  display: block;
+  text-align: center;
+  font-size: 1rem;
+  display: block;
+  text-align: center;
+  font-size: 1rem;
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-weight: bold;
+}
+@media (min-width: 991px) {
+  .navbar-brand{
+    display: none;
+  }
+ }
+
 .nav-item{
   font-size: 1.6rem;
   margin: 1rem 1.5rem;
